fix tertiary text overflow (#533)
* fix tertiary text overflow

--- a/css/general.css
+++ b/css/general.css
@@ -121,6 +121,7 @@ div.glider-slide {
 .ffw-button .tertiary-text {
     text-align: right;
     margin-right: 10px;
+    line-height: 25px;
 }
 
 .ffw-button .end-info {
@@ -128,6 +129,7 @@ div.glider-slide {
     justify-content: flex-end;
     flex-grow: 4;
     right: 0px;
+    max-height: 100%;
 }
 
 .ffw-button .relative-r-0 {
